--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "biome check ./src --write",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"e2e": "playwright test"
 	},
 	"dependencies": {
 		"react": "^18.3.1",
@@ -18,6 +19,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
+		"@playwright/test": "^1.45.3",
+		"@types/node": "^22.1.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
