--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-hot-toast": "^2.4.1",
 		"react-router-dom": "^6.26.0",
 		"tailwind-merge": "^2.4.0",
 		"zustand": "^4.5.4"
