--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy static content to Pages
 
 on:
-  push:
-    branches: ['main']
-
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Playwright Tests"]
+    types:
+      - completed
 
 permissions:
   contents: read
@@ -21,6 +21,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
